Implement live aircraft, replaceable sources and detailed maps
